## Makefile.am

ACLOCAL_AMFLAGS = -I m4

SUBDIRS = lib mkfs fsck label

# manpages
dist_man8_MANS =		\
	fsck/fsck.exfat.8	\
	label/label.exfat.8	\
	mkfs/mkfs.exfat.8

# other stuff
EXTRA_DIST =			\
	include			\
	Android.bp		\
	lib/Android.bp		\
	mkfs/Android.bp		\
	label/Android.bp	\
	fsck/Android.bp		\
	README.md
