## Makefile.am

ACLOCAL_AMFLAGS = -I m4

SUBDIRS = lib mkfs fsck tune

# manpages
dist_man8_MANS =		\
	fsck/fsck.exfat.8	\
	tune/tune.exfat.8	\
	mkfs/mkfs.exfat.8

# other stuff
EXTRA_DIST =			\
	include			\
	Android.bp		\
	lib/Android.bp		\
	mkfs/Android.bp		\
	tune/Android.bp	\
	fsck/Android.bp		\
	README.md
