## Makefile.am

ACLOCAL_AMFLAGS = -I m4

SUBDIRS = lib mkfs fsck tune label dump

# manpages
dist_man8_MANS =		\
	manpages/fsck.exfat.8	\
	manpages/tune.exfat.8	\
	manpages/mkfs.exfat.8	\
	manpages/exfatlabel.8	\
	manpages/dump.exfat.8

# other stuff
EXTRA_DIST =			\
	include			\
	Android.bp		\
	lib/Android.bp		\
	mkfs/Android.bp		\
	tune/Android.bp		\
	fsck/Android.bp		\
	label/Android.bp	\
	dump/Android.bp		\
	README.md
